--- a/Capstone_Project_Notebook1.ipynb
+++ b/Capstone_Project_Notebook1.ipynb
@@ -1,25 +1,19 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "VTvr4_sti9Am"
-   },
-   "source": [
-    "# Inroduction\n"
-   ]
+ "cells": [],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Rm8HKcygh4L2"
-   },
-   "source": [
-    "This sample notebook demonstrates how to process live data streams using Pathway. The dataset used here is a subset of the one provided — specifically, it includes data for only a single parking spot. You are expected to implement your model across all parking spots.\n",
-    "\n",
-    "Please note that the pricing model used in this notebook is a simple baseline. You are expected to design and implement a more advanced and effective model.\n"
-   ]
-  },
+  "language_info": {
+   "name": "python",
+   "version": "3.x"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+},
   {
    "cell_type": "code",
    "execution_count": 1,
